--- a/server/package.json
+++ b/server/package.json
@@ -1,32 +1,28 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "description": "Express TypeScript Server",
-  "main": "dist/index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev -p 4000",
+    "build": "next build",
+    "start": "next start -p 4000",
+    "lint": "eslint"
   },
-  "keywords": [
-    "express",
-    "typescript",
-    "nodejs"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "dexie": "^3.2.4",
+    "next": "14.2.18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "xxdk-wasm": "file:../xxNetworkdemo/reactjs/node_modules/xxdk-wasm"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.3",
-    "ts-node-dev": "^2.0.0"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.18",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
-
