--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@arkiv-network/sdk": "^0.4.4",
+    "arkiv-sdk": "^0.1.19",
     "dexie": "^3.2.4",
+    "dotenv": "^17.2.3",
+    "ethers": "^6.15.0",
     "next": "14.2.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tslib": "^2.8.1",
+    "viem": "^2.39.0",
     "xxdk-wasm": "^0.3.22"
   },
   "devDependencies": {
