--- a/pi/xxNetworkdemo/reactjs/package.json
+++ b/pi/xxNetworkdemo/reactjs/package.json
@@ -18,12 +18,14 @@
     "dexie": "^3.2.6",
     "framer-motion": "^11.0.8",
     "next": "14.1.3",
+    "node-dht-sensor": "^0.4.5",
     "react": "^18",
     "react-dom": "^18",
     "xxdk-wasm": "^0.3.19"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-dht-sensor": "^0.4.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
