--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint",
-    "insert-sensor-data": "ts-node --project tsconfig.json lib/arkiv/script.ts"
+    "insert-sensor-data": "tsx lib/arkiv/script.ts"
   },
   "dependencies": {
     "@arkiv-network/sdk": "latest",
+    "dotenv": "^17.2.3",
     "next": "14.2.33",
     "react": "^18",
     "react-dom": "^18"
@@ -23,7 +24,7 @@
     "eslint-config-next": "14.2.33",
     "postcss": "^8",
     "tailwindcss": "^3.4.18",
-    "typescript": "^5",
-    "ts-node": "^10.9.2"
+    "tsx": "^4.7.0",
+    "typescript": "^5"
   }
 }
