--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@arkiv-network/sdk": "latest",
+    "dexie": "^3.2.4",
     "dotenv": "^17.2.3",
     "next": "14.2.33",
     "react": "^18",
